2004-03-25  Guillaume Smet <guillaume-gforge@smet.org>

	* implemented some new config flags to enable/disable partially implemented
	features (vhost, multimedia, database)
	* added a new cronjob called tarballs.php to generate CVS tarballs. It uses a
	modified version of deb-specific/tarballs.sh (not added yet in README.root)
	* added $sys_cvs_tarballs_path in config to make tarballs generation and
	download work in mainstream
	* updated French localization

2004-03-24  Guillaume Smet <guillaume-gforge@smet.org>

	* implemented a correct management of $sys_use_people flag in all GForge

2004-03-23  Tom Copeland <tom@infoether.com>
	* www/forum/include/ForumHTML.class: Implemented RFE [ #720 ] Link 
	news items to project site.

2004-03-17  Guillaume Smet <guillaume-gforge@smet.org>

	* fixed remaining groups.type (tperdue renamed this field to type_id)
	* fixed errortext markups in installation guide

2004-03-16  Guillaume Smet <guillaume-gforge@smet.org>

	* improved user guide and contribution guide 

2004-03-14  Guillaume Smet <guillaume-gforge@smet.org>

	* Some HTML cleanup and bugfixes.
	* Fixed a bug in theme selection introduced by Tom last week.
	* Fixed bug [ #718 ] introduced by Tom last week.

2004-03-12  Tom Copeland <tom@infoether.com>
	* www/snippet/browse.php & detail.php: Replace user_name with realname,
	added link to user's page. 
	* Layout.class - added a createLinkToUserHome() function
	* SQL optimization: Replaced a 'select *' with a 'select count(*)'
	in Artifact.class, User.class, and Permission.class.

2004-03-11  Tom Copeland <tom@infoether.com>
	* SQL optimization: Replaced a 'select *' with a 'select count(*)'
	in Forum.class.  Modified query in project_summary.php to limit columns
	returned to those used.

2004-03-09  Guillaume Smet <guillaume-gforge@smet.org>

	* Fixed CVS statistics display.
	* Redesigned group list in admin.
	* Display groups/users beginning with is now working correctly.
